exports[`processes find filters processes with given input 1`] = `
Array [
  Object {
    "subtitle": "zazu",
    "title": "Zazu",
    "value": Object {
      "id": 222,
      "name": "Zazu",
    },
  },
]
`;

exports[`processes find lists processes 1`] = `
Array [
  Object {
    "subtitle": "node index.js",
    "title": "node",
    "value": Object {
      "id": 111,
      "name": "node",
    },
  },
  Object {
    "subtitle": "zazu",
    "title": "Zazu",
    "value": Object {
      "id": 222,
      "name": "Zazu",
    },
  },
  Object {
    "subtitle": "atom",
    "title": "Atom",
    "value": Object {
      "id": 333,
      "name": "Atom",
    },
  },
]
`;
